# cdoku

./: .gitignore  CMakeLists.txt  README.md  puzzle_generator_app
old_src/: main.c
old_src/generator/: generate_puzzle.c  generate_puzzle.h
old_src/puzzle/: puzzle.c  puzzle.h  step.h  strategies.c
old_src/solver/: basic_fish_solver.h  finned_fish_solver.h  sudoku_solver.c  sudoku_solver.h
old_src/xy_wing_solver/: xy_wing_solver.h
src/: CMakeLists.txt  main.c  utils.h
src/app/: CMakeLists.txt  app_conf.c  app_conf.h  main.c
src/fish_solver/: basic_fish_solver.c  basic_fish_solver.h  finned_fish_solver.c  finned_fish_solver.h
src/generator/: CMakeLists.txt  generate_puzzle.c  generate_puzzle.h  puzzle_generator.c  puzzle_generator.h
src/logger/: CMakeLists.txt  log.c  log.h  logger.c  logger.h
src/puzzle/: CMakeLists.txt  globals.c  globals.h  puzzle.c  puzzle.h  puzzle_globals.c  puzzle_globals.h  step.c  step.h  strategies.h
src/skyscraper_solver/: skyscraper_solver.c  skyscraper_solver.h
src/solver/: basic_fish_solver.c  basic_fish_solver.h  brute_force_solver.c  finned_fish_solver.h  puzzle.c  puzzle.h  skyscraper_solver.h  step.c  step.h  strategies.c  strategies.h  sudoku_solver.c  sudoku_solver.h  utils.h
src/solvers/: CMakeLists.txt
src/solvers/algorithm_x/: CMakeLists.txt  alg_x_solve.c  alg_x_solve.h  matrix.c  matrix.h  node.c  node.h  solve.c
src/solvers/logical/: CMakeLists.txt  guess.c  guess.h  locked_candidates.c  locked_candidates.h  logical_solve.c  logical_solve.h  simple_colors.c  simple_colors.h  singles.c  singles.h  skyscraper.c  skyscraper.h  subsets.c  subsets.h  x_wing.c  x_wing.h  xy_wing.c  xy_wing.h
src/utils/: CMakeLists.txt  utils.c  utils.h
src/xy_wing_solver/: xy_wing_solver.c
tests/: CMakeLists.txt  sudoku_solver_tests.c  test_suite.c
tests/puzzle/: test_puzzle.c
tests/solvers/algorithm_x/: test_matrix.c  test_node.c
tests/solvers/logical/: test_locked_candidates.c  test_singles.c  test_skyscraper.c  test_subsets.c  test_x_wing.c
