include(CTest)
enable_testing()

add_executable(test_matrix ${CMAKE_CURRENT_SOURCE_DIR}/solvers/algorithm_x/test_matrix.c)
add_executable(test_node ${CMAKE_CURRENT_SOURCE_DIR}/solvers/algorithm_x/test_node.c)
add_executable(test_puzzle ${CMAKE_CURRENT_SOURCE_DIR}/puzzle/test_puzzle.c)
add_executable(test_singles ${CMAKE_CURRENT_SOURCE_DIR}/solvers/logical/test_singles.c)
add_executable(test_subsets ${CMAKE_CURRENT_SOURCE_DIR}/solvers/logical/test_subsets.c)

target_link_libraries(test_matrix unity algorithm_x_solver)
target_link_libraries(test_node unity algorithm_x_solver)
target_link_libraries(test_puzzle unity puzzle)
target_link_libraries(test_singles unity puzzle logical_solver)
target_link_libraries(test_subsets unity puzzle logical_solver )

add_test(matrix_tests test_matrix)
add_test(node_tests test_node)
add_test(puzzle_tests test_puzzle)
add_test(singles_tests test_singles)
add_test(subsets_tests test_subsets)