include(CTest)
enable_testing()

add_executable(test_matrix ${CMAKE_CURRENT_SOURCE_DIR}/solvers/algorithm_x/test_matrix.c)
add_executable(test_node ${CMAKE_CURRENT_SOURCE_DIR}/solvers/algorithm_x/test_node.c)
add_executable(test_puzzle ${CMAKE_CURRENT_SOURCE_DIR}/puzzle/test_puzzle.c)
add_executable(test_singles ${CMAKE_CURRENT_SOURCE_DIR}/solvers/logical/test_singles.c)
add_executable(test_subsets ${CMAKE_CURRENT_SOURCE_DIR}/solvers/logical/test_subsets.c)
add_executable(test_locked_candidates ${CMAKE_CURRENT_SOURCE_DIR}/solvers/logical/test_locked_candidates.c)
add_executable(test_x_wings ${CMAKE_CURRENT_SOURCE_DIR}/solvers/logical/test_x_wing.c)
add_executable(test_skyscrapers ${CMAKE_CURRENT_SOURCE_DIR}/solvers/logical/test_skyscraper.c)

target_link_libraries(test_matrix unity algorithm_x_solver)
target_link_libraries(test_node unity algorithm_x_solver)
target_link_libraries(test_puzzle unity puzzle)
target_link_libraries(test_singles unity puzzle logical_solver)
target_link_libraries(test_subsets unity puzzle logical_solver)
target_link_libraries(test_locked_candidates unity puzzle logical_solver)
target_link_libraries(test_x_wings unity puzzle logical_solver)
target_link_libraries(test_skyscrapers unity puzzle logical_solver)

add_test(matrix_tests test_matrix)
add_test(node_tests test_node)
add_test(puzzle_tests test_puzzle)
add_test(singles_tests test_singles)
add_test(subsets_tests test_subsets)
add_test(locked_candidates test_locked_candidates)
add_test(x_wings test_x_wings)
add_test(skyscrapers test_skyscrapers)
